--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="/index.html"><span>Web</span>Studio</a>
       <ul>
         <li><a href="/index.html">Студія</a></li>
-        <li><a href="3Сторінка">Портфоліо</a></li>
+        <li><a href="/portfolio.html">Портфоліо</a></li>
         <li><a href="4Сторінка">Контакти</a></li>
       </ul>
     </nav>
