--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,7 @@
   </header>
   <main>
   <section>
+    <h1 hidden>Приклади наших робіт</h1>
     <ul>
       <li><button type="button">Усі</button></li>
       <li><button type="button">Веб-сайти</button></li>
