--- a/portfolio.html
+++ b/portfolio.html
@@ -34,47 +34,47 @@
     </ul>
     <ul>
       <li>
-        <img src="./images/img.1.portfolio.jpg" alt="" width="370" height="294">
+        <img src="./images/img.1.portfolio.jpg" alt="Сайт проекту Технокряк" width="370" height="294">
         <h2>Технокряк</h2>
         <p>Веб-сайт</p>
       </li>
       <li>
-        <img src="./images/img.2.portfolio.jpg" alt="" width="370" height="294">
+        <img src="./images/img.2.portfolio.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
         <h2>Постер New Orlean vs Golden Star</h2>
         <p>Дизайн</p>
       </li>
       <li>
-        <img src="./images/img.3.portfolio.jpg" alt="" width="370" height="294">
+        <img src="./images/img.3.portfolio.jpg" alt="Логотип ресторану Seafood" width="370" height="294">
         <h2>Ресторан Seafood</h2>
         <p>Додаток</p>
       </li>
       <li>
-        <img src="./images/img.4.portfolio.jpg" alt="" width="370" height="294">
+        <img src="./images/img.4.portfolio.jpg" alt="Чорні навушники" width="370" height="294">
         <h2>Проєкт Prime</h2>
         <p>Маркетинг</p>
       </li>
       <li>
-        <img src="./images/img.5.portfolio.jpg" alt="" width="370" height="294">
+        <img src="./images/img.5.portfolio.jpg" alt="Дві коробки з логотипом проекту" width="370" height="294">
         <h2>Проєкт Boxes</h2>
         <p>Додаток</p>
       </li>
       <li>
-        <img src="./images/img.6.portfolio.jpg" alt="" width="370" height="294">
+        <img src="./images/img.6.portfolio.jpg" alt="Сайт проекту Inspiration has no Borders" width="370" height="294">
         <h2>Inspiration has no Borders</h2>
         <p>Веб-сайт</p>
       </li>
       <li>
-        <img src="./images/img.7.portfolio.jpg" alt="" width="370" height="294">
+        <img src="./images/img.7.portfolio.jpg" alt="Журнальна обгортка" width="370" height="294">
         <h2>Видання Limited Edition</h2>
         <p>Дизайн</p>
       </li>
       <li>
-        <img src="./images/img.8.portfolio.jpg" alt="" width="370" height="294">
+        <img src="./images/img.8.portfolio.jpg" alt="Бігунок" width="370" height="294">
         <h2>Проєкт LAB</h2>
         <p>Маркетинг</p>
       </li>
       <li>
-        <img src="./images/img.9.portfolio.jpg" alt="" width="370" height="294">
+        <img src="./images/img.9.portfolio.jpg" alt="Ноутбук з відкритим сайтом Growing Business" width="370" height="294">
         <h2>Growing Business</h2>
         <p>Додаток</p>
       </li>
