--- a/portfolio.html
+++ b/portfolio.html
@@ -12,88 +12,87 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="/index.html"><span>Web</span>Studio</a>
-      <ul>
-        <li><a href="/index.html">Студія</a></li>
-        <li><a href="/portfolio.html">Портфоліо</a></li>
-        <li><a href="4Сторінка">Контакти</a></li>
+  <header class="header">
+    <nav class="navigation">
+      <a href="/index.html" class="link logo-link">Web<span class="logo-part-black">Studio</span></a>
+      <ul class="list">
+        <li><a href="/index.html" class="link  navigation">Студія</a></li>
+        <li><a href="/portfolio.html" class="link current navigation">Портфоліо</a></li>
+        <li><a href="4Сторінка" class="link navigation">Контакти</a></li>
       </ul>
     </nav>
-    <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <ul class="list">
+      <li><a href="mailto:info@devstudio.com" class="link contacts-header">info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111" class="link contacts-header">+38 096 111 11 11</a></li>
     </ul>
-    
   </header>
   <main>
   <section>
     <h1 hidden>Приклади наших робіт</h1>
-    <ul>
-      <li><button type="button">Усі</button></li>
-      <li><button type="button">Веб-сайти</button></li>
-      <li><button type="button">Додатки</button></li>
-      <li><button type="button">Дизайн</button></li>
-      <li><button type="button">Маркетинг</button></li>
+    <ul class="list">
+      <li><button type="button" class="filter">Усі</button></li>
+      <li><button type="button" class="filter">Веб-сайти</button></li>
+      <li><button type="button" class="filter">Додатки</button></li>
+      <li><button type="button" class="filter">Дизайн</button></li>
+      <li><button type="button" class="filter">Маркетинг</button></li>
     </ul>
-    <ul>
-      <li>
+    <ul class="list">
+      <li class="example">
         <img src="./images/img.1.portfolio.jpg" alt="Сайт проекту Технокряк" width="370" height="294">
-        <h2>Технокряк</h2>
-        <p>Веб-сайт</p>
+        <h2 class="example-title">Технокряк</h2>
+        <p class="example-type">Веб-сайт</p>
       </li>
-      <li>
+      <li class="example">
         <img src="./images/img.2.portfolio.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-        <h2>Постер New Orlean vs Golden Star</h2>
-        <p>Дизайн</p>
+        <h2 class="example-title">Постер New Orlean vs Golden Star</h2>
+        <p class="example-type">Дизайн</p>
       </li>
-      <li>
+      <li class="example">
         <img src="./images/img.3.portfolio.jpg" alt="Логотип ресторану Seafood" width="370" height="294">
-        <h2>Ресторан Seafood</h2>
-        <p>Додаток</p>
+        <h2 class="example-title">Ресторан Seafood</h2>
+        <p class="example-type">Додаток</p>
       </li>
-      <li>
+      <li class="example">
         <img src="./images/img.4.portfolio.jpg" alt="Чорні навушники" width="370" height="294">
-        <h2>Проєкт Prime</h2>
-        <p>Маркетинг</p>
+        <h2 class="example-title">Проєкт Prime</h2>
+        <p class="example-type">Маркетинг</p>
       </li>
-      <li>
+      <li class="example">
         <img src="./images/img.5.portfolio.jpg" alt="Дві коробки з логотипом проекту" width="370" height="294">
-        <h2>Проєкт Boxes</h2>
-        <p>Додаток</p>
+        <h2 class="example-title">Проєкт Boxes</h2>
+        <p class="example-type">Додаток</p>
       </li>
-      <li>
+      <li class="example">
         <img src="./images/img.6.portfolio.jpg" alt="Сайт проекту Inspiration has no Borders" width="370" height="294">
-        <h2>Inspiration has no Borders</h2>
-        <p>Веб-сайт</p>
+        <h2 class="example-title">Inspiration has no Borders</h2>
+        <p class="example-type">Веб-сайт</p>
       </li>
-      <li>
+      <li class="example">
         <img src="./images/img.7.portfolio.jpg" alt="Журнальна обгортка" width="370" height="294">
-        <h2>Видання Limited Edition</h2>
-        <p>Дизайн</p>
+        <h2 class="example-title">Видання Limited Edition</h2>
+        <p class="example-type">Дизайн</p>
       </li>
-      <li>
+      <li class="example">
         <img src="./images/img.8.portfolio.jpg" alt="Бігунок" width="370" height="294">
-        <h2>Проєкт LAB</h2>
-        <p>Маркетинг</p>
+        <h2 class="example-title">Проєкт LAB</h2>
+        <p class="example-type">Маркетинг</p>
       </li>
-      <li>
+      <li class="example">
         <img src="./images/img.9.portfolio.jpg" alt="Ноутбук з відкритим сайтом Growing Business" width="370" height="294">
-        <h2>Growing Business</h2>
-        <p>Додаток</p>
+        <h2 class="example-title">Growing Business</h2>
+        <p class="example-type">Додаток</p>
       </li>
     </ul>
   </section>
   </main>
-  <footer>
-    <a href="/index.html"><span>Web</span>Studio</a>
-    <address>
-      <ul>
-        <li><a href="https://goo.gl/maps/nEx1NBvYDkWCobhn8" target="_blank" rel="noopener noreferrer nofollow">м. Київ,
-            пр-т Лесі Українки, 26</a></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+  <footer class="footer">
+    <a href="/index.html" class="link logo-link">Web<span class="logo-part-white">Studio</span></a>
+    <address class="adress">
+      <ul class="list">
+        <li><a href="https://goo.gl/maps/nEx1NBvYDkWCobhn8" class="link google-adress" target="_blank"
+            rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
+        <li><a href="mailto:info@devstudio.com" class="link contacts-footer">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link contacts-footer">+38 096 111 11 11</a></li>
       </ul>
     </address>
   
