--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </section>
   </main>
   <footer class="footer">
-    <a href="/index.html" class="link logo-link">Web<span class="logo-part-white">Studio</span></a>
+    <a href="index.html" class="link logo-link">Web<span class="logo-part-white">Studio</span></a>
     <address class="adress">
       <ul class="list">
         <li><a href="https://goo.gl/maps/nEx1NBvYDkWCobhn8" class="link google-adress" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
