--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="index.html" class="link logo-link">Web<span class="logo-part-black">Studio</span></a>
       <ul class="list">
         <li><a href="index.html" class="link current navigation">Студія</a></li>
-        <li><a href="portfolio.html" class="link navigation">Портфоліо</a></li>
+        <li><a href="./portfolio.html" class="link navigation">Портфоліо</a></li>
         <li><a href="4Сторінка" class="link navigation">Контакти</a></li>
       </ul>
     </nav>
