--- a/portfolio.html
+++ b/portfolio.html
@@ -14,10 +14,10 @@
 <body>
   <header class="header">
     <nav class="navigation">
-      <a href="index.html" class="link logo-link">Web<span class="logo-part-black">Studio</span></a>
+      <a href="./index.html" class="link logo-link">Web<span class="logo-part-black">Studio</span></a>
       <ul class="list">
-        <li><a href="index.html" class="link  navigation">Студія</a></li>
-        <li><a href="portfolio.html" class="link current navigation">Портфоліо</a></li>
+        <li><a href="./index.html" class="link  navigation">Студія</a></li>
+        <li><a href="./portfolio.html" class="link current navigation">Портфоліо</a></li>
         <li><a href="4Сторінка" class="link navigation">Контакти</a></li>
       </ul>
     </nav>
@@ -86,7 +86,7 @@
   </section>
   </main>
   <footer class="footer">
-    <a href="index.html" class="link logo-link">Web<span class="logo-part-white">Studio</span></a>
+    <a href="./index.html" class="link logo-link">Web<span class="logo-part-white">Studio</span></a>
     <address class="adress">
       <ul class="list">
         <li><a href="https://goo.gl/maps/nEx1NBvYDkWCobhn8" class="link google-adress" target="_blank"
